fix(overlay): fix z-index for the navigation bar overlay

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -123,6 +123,7 @@ h1 {
   visibility: hidden;
   transition: opacity 0.35s, visibility 0.35s, height 0.35s;
   overflow: hidden;
+  z-index: 1039;
 }
 
 .overlay.open {
